--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,43 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+    <TextView android:layout_width="match_parent"
+              android:layout_height="0dp"
+              android:id="@+id/label"
+              android:textSize="16sp"
+              android:text="@string/type_here"
+              tools:ignore="MissingConstraints" app:layout_constraintTop_toTopOf="parent"
+              android:layout_marginTop="10dp" app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="10dp"
+              android:layout_marginEnd="10dp"
+              android:focusable="false"
+              android:focusableInTouchMode="true"
+    />
 
+    <EditText android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:id="@+id/entry"
+              tools:ignore="MissingConstraints"
+              app:layout_constraintTop_toBottomOf="@+id/label"/>
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="0dp"
+            android:layout_height="0dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/entry" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent">
+        <Button
+                android:text="@string/open"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/open"/>
+        <Button
+                android:text="@string/send"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/send"/>
+        <Button
+                android:text="@string/close"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/close"/>
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
